# payments

./: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: Dockerfile
src/consumer/: pyproject.toml
src/payments/: __init__.py  pyproject.toml
src/payments/application/: create_payment.py  get_payment.py  update_payment_status.py
src/payments/application/common/: errors.py  exceptions.py  handler.py
src/payments/application/ports/: clock.py  event_collector.py  event_publisher.py  payment_gateway.py  transaction_manager.py  uuid_generator.py  webhook_client.py
src/payments/domain/entities/: base.py  payment.py  payment_id.py
src/payments/domain/events/: base.py  payment_created.py
src/payments/domain/value_objects/: currency.py  payment_status.py
src/payments/infrastructure/adapters/: clock.py  event_collector.py  event_publisher.py  outbox_relay.py  payment_repository.py  transaction_manager.py  utc_clock.py  uuid_generator.py  webhook_client.py
src/payments/infrastructure/amqp/: __init__.py  publisher.py
src/payments/infrastructure/broker/: __init__.py  topology.py
src/payments/infrastructure/persistence/: registry.py
src/payments/infrastructure/persistence/migrations/: env.py
src/payments/infrastructure/persistence/migrations/versions/: 07ef33c004af_outbox_table.py  1869437e2a9a_outbox_retry_columns.py  ee249443f300_initial.py
src/payments/infrastructure/persistence/tables/: outbox.py  payments.py
src/payments/main/: bootstrap.py  config.py  di.py  entrypoint.py
src/payments/main/listener/: __main__.py  entrypoint.py
src/payments/main/relay/: __main__.py  entrypoint.py
src/payments/main/web/: __main__.py  entrypoint.py
src/payments/presentation/api/amqp/v1/: router.py  schemas.py
src/payments/presentation/api/http/v1/: error_handlers.py  middleware.py  router.py  schemas.py
tests/: conftest.py
tests/service/: conftest.py  test_amqp.py  test_handlers.py  test_payments_api.py
tests/unit/: test_domain.py  test_exceptions.py  test_schemas.py
