[project]
name = "payments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sanek", email = "alexandr.panteleev2000@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dishka>=1.10.1",
    "dishka-faststream>=0.7.0",
    "fastapi>=0.138.0",
    "faststream[rabbit]>=0.7.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "orjson>=3.10.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
payments = "payments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.19",
]

[tool.ruff]
target-version = "py314"
line-length = 100
preview = true
src = ["src"]
extend-exclude = [".git", ".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",      # 1 blank line before class — conflicts with D211
    "D213",      # Multi-line summary second line — conflicts with D212
    "FIX002",    # Line contains TODO/FIXME
    "PLR0911",   # Too many return statements
    "PLR0913",   # Too many arguments
    "PLR6301",   # Method could be function/classmethod
    "CPY001",    # Missing copyright notice (not needed for this project)
    "TC001",     # Move first-party import into TYPE_CHECKING
    "TC002",     # Move third-party import into TYPE_CHECKING
    "TC003",     # Move standard library import into TYPE_CHECKING
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "D104",      # Missing docstring in public package
    "F401",      # Imported but unused (re-exports)
    "RUF067",    # Non-empty __init__ (entrypoint contains main())
]
"tests/**/*.py" = [
    "D103",      # Missing docstring in public function
    "S101",      # Use of assert
    "PLR2004",   # Magic value comparison
    "ARG001",    # Unused function argument
    "INP001",    # Missing __init__.py
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
local_partial_types = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["dishka.*", "dishka_faststream.*"]
ignore_missing_imports = true
