[project]
name = "payments"
version = "0.1.0"
description = "Async payment processing service"
requires-python = ">=3.14"
authors = [
    { name = "sanek", email = "alexandr.panteleev2000@gmail.com" }
]
dependencies = [
    "alembic>=1.18.4",
    "dishka>=1.10.1",
    "dishka-faststream>=0.7.0",
    "fastapi>=0.138.0",
    "faststream[rabbit]>=0.7.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "orjson>=3.10.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.49.0",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28.0",
]

[tool.uv.workspace]
members = ["packages/consumer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.19",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.ruff]
target-version = "py314"
line-length = 100
preview = true
src = ["src"]
extend-exclude = [".git", ".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",      # 1 blank line before class — conflicts with D211
    "D213",      # Multi-line summary second line — conflicts with D212
    "FIX002",    # Line contains TODO/FIXME
    "PLR0911",   # Too many return statements
    "PLR0913",   # Too many arguments
    "PLR6301",   # Method could be function/classmethod
    "CPY001",    # Missing copyright notice (not needed for this project)
    "TC001",     # Move first-party import into TYPE_CHECKING
    "TC002",     # Move third-party import into TYPE_CHECKING
    "TC003",     # Move standard library import into TYPE_CHECKING
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "D104",      # Missing docstring in public package
    "F401",      # Imported but unused (re-exports)
    "RUF067",    # Non-empty __init__ (entrypoint contains main())
]
"src/payments/main/di.py" = [
    "D102",      # Provider methods are self-documenting
]
"tests/*.py" = [
    "D100",      # Missing module docstring
    "D101",      # Missing class docstring
    "D102",      # Missing method docstring
    "D103",      # Missing docstring in public function
    "D104",      # Missing docstring in public package
    "D107",      # Missing docstring in __init__
    "S101",      # Use of assert
    "PLR2004",   # Magic value comparison
    "PLR6301",   # Method could be function/classmethod
    "ARG001",    # Unused function argument
    "ARG005",    # Unused lambda argument
    "INP001",    # Missing __init__.py
    "FBT001",    # Boolean positional arg in function definition
    "EM101",     # Exception must not use f-string
    "EM102",     # Exception must not use dot-notation
    "TRY003",    # Avoid specifying long messages outside the exception class
    "TRY300",    # Consider moving to else block
    "B904",      # Raise from within except block
    "RUF029",    # Unused async (test fixtures are async for consistency)
    "PLR0915",   # Too many statements (test helpers are ok)
    "PLW0717",   # Too many statements in try clause (test helpers are ok)
]
"tests/**/*.py" = [
    "D100",      # Missing module docstring
    "D101",      # Missing class docstring
    "D102",      # Missing method docstring
    "D103",      # Missing docstring in public function
    "D104",      # Missing docstring in public package
    "D107",      # Missing docstring in __init__
    "S101",      # Use of assert
    "PLR2004",   # Magic value comparison
    "PLR6301",   # Method could be function/classmethod
    "ARG001",    # Unused function argument
    "ARG005",    # Unused lambda argument
    "INP001",    # Missing __init__.py
    "FBT001",    # Boolean positional arg in function definition
    "EM101",     # Exception must not use f-string
    "EM102",     # Exception must not use dot-notation
    "TRY003",    # Avoid specifying long messages outside the exception class
    "TRY300",    # Consider moving to else block
    "B904",      # Raise from within except block
    "RUF029",    # Unused async (test fixtures are async for consistency)
    "PLR0915",   # Too many statements (test helpers are ok)
    "PLW0717",   # Too many statements in try clause (test helpers are ok)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
local_partial_types = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["dishka.*", "dishka_faststream.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
