[project]
name = "payments"
version = "0.1.0"
description = "Async payment processing service"
requires-python = ">=3.14"
authors = [
    { name = "sanek", email = "alexandr.panteleev2000@gmail.com" }
]
dependencies = [
    "alembic>=1.18.4",
    "dishka>=1.10.1",
    "dishka-faststream>=0.7.0",
    "fastapi>=0.138.0",
    "faststream[rabbit]>=0.7.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "orjson>=3.10.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn>=0.49.0",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28.0",
]

[project.scripts]
payments = "payments:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
